--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'application'
     id 'java'
     id 'checkstyle'
     id 'jacoco'
@@ -23,8 +24,12 @@ test {
     useJUnitPlatform()
 }
 
+application {
+    mainClass.set("hexlet.code.App")
+}
+
 jacoco {
-    toolVersion = "0.8.10"
+    toolVersion = "0.8.12"
 }
 
 jacocoTestReport {
